refactor(backend): update routes to get all instead of a limit
